--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,8 +23,8 @@
         app:layout_constraintVertical_bias="0.645" />
 
     <LinearLayout
-        android:layout_width="316dp"
-        android:layout_height="316dp"
+        android:layout_width="315dp"
+        android:layout_height="421dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -68,6 +68,12 @@
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:text="Ingresar" />
+
+        <Button
+            android:id="@+id/btn_SingUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Crear cuenta" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
